# ugf_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
hades/: hades_db.sqlite
hades/hades/: settings.py  urls.py
hades/hadesapp/: admin.py  apps.py  decorators.py  filters.py  forms.py  inject_form.py  models.py  signals.py  urls.py  utils.py  views.py
hades/hadesapp/migrations/: 0001_initial.py  0002_alter_customuser_date_of_birth_and_more.py  0002_gamerate.py  0003_customuser_subscribers.py  0003_gamerate_created_at.py  0004_appeal.py  0004_remove_customuser_subscribers_customuser_followers.py  0005_alter_appeal_checked_by.py  0006_article.py  0007_remove_article_user_id_article_user.py  0008_article_created_at.py  0009_articlerate.py  0010_remove_article_game_article_games.py  0011_alter_article_games.py  0012_articlerate_hadesapp_ar_user_id_835e4a_idx.py
hades/hadesapp/templates/hadesapp/: appeals.html  article_page.html  base.html  create_article.html  developers.html  game_page.html  game_page_2.html  games.html  genres.html  login.html  main.html  registration.html  subscriptions.html  update_article.html  update_user_profile.html  user_profile.html  user_search.html
hades/hadesapp/templates/hadesapp/components/: contact_data_profile.html  footer.html  header_navbar.html  home_body.html  login_block.html  signup_block.html
hades/hadesapp/templates/hadesapp/delete_pages/: delete_developer.html  delete_game.html  delete_genre.html
hades/hadesapp/templatetags/: time_format.py
hades/static/css/: custom_css.css
hades/static/js/: stars.js
