[tool.poetry]
name = "project-hades"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_hades"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
jinja2 = "^3.1.2"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.1"
django-autoslug = "^1.9.8"
pillow = "^9.4.0"
django-filter = "^22.1"
django-froala-editor = "^4.0.18"
pytz = "^2023.3"
django-postgres-extra = "^2.0.8"
black = "^23.3.0"
requests = "^2.30.0"
django-redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
